--- a/public/cameras.html
+++ b/public/cameras.html
@@ -1,4 +1,12 @@
 <html>
+  <!-- Check if the user is authenticated -->
+  <script src="https://cdn.jsdelivr.net/js-cookie/2.2.0/js.cookie.js"></script>
+  <script>
+    if (Cookies.get('auth_token') == null) {
+      window.alert('Unauthenticated');
+      window.location.replace('/');
+    }
+  </script>
   <body>
     <h2>Cameras</h2>
     <a href="/frontdoor">Front Door</a><br>
